--- a/writeups/icra12/report.tex
+++ b/writeups/icra12/report.tex
@@ -127,7 +127,8 @@ Open source stuff.
 The authors gratefully acknowledge the contribution of National Research Organization and reviewers' comments.
 
 {\small
-\bibliography{sergeyk-papers}
+\bibliographystyle{ieee}
+\bibliography{sergeyk-icra12,misc}
 }
 
 \end{document}
