more work on paper

--- a/writeups/icra12/architecture.tex
+++ b/writeups/icra12/architecture.tex
@@ -1,4 +1,6 @@
+%!TEX root=./report.tex
 \section{ARCHITECTURE AND IMPLEMENTATION}
 * describe the Proctor code
 
 * synthetic approach, voting, kdTree stuff, PCL
+
