--- a/writeups/icra12/intro_and_related_work.tex
+++ b/writeups/icra12/intro_and_related_work.tex
@@ -4,6 +4,13 @@ Research in robotics and computer vision has long considered the use of 3-D poin
 Throughout the history of research, the recognition methods and features considered have shared ideas--from early work on retrieving 3-D shape models to integrating 2-D and 3-D percepts to human pose estimation.
 But the sheer diversity of applications has made it hard to see the common patterns, and nearly impossible to meaningfully compare between different choices made in the processing pipeline.
 
+\begin{figure}[thpb]
+   \centering
+   \includegraphics[width=0.45\textwidth]{figures/figure1.pdf}
+   \caption{Our system modularizes the standard 3-D recognition pipeline such that individual components may be comparatively evaluated.}
+   \label{fig:figure1}
+\end{figure}
+
 We hope to foster easier sharing of ideas and methods through a common evaluation framework for 3-D perception tasks.
 In this paper, we present an open-source framework for comparing different 3-D features in the model matching evaluation regime.
 We explain the motivations behind our system and describe its modular architecture, with the aim of encouraging a community of users and contributors.
