--- a/writeups/icra12/report.tex
+++ b/writeups/icra12/report.tex
@@ -15,7 +15,7 @@
 % on the last page of the document
 
 % The following packages can be found on http:\\www.ctan.org
-\usepackage{graphics} % for pdf, bitmapped graphics files
+%\usepackage{graphics} % for pdf, bitmapped graphics files
 %\usepackage{epsfig} % for postscript graphics files
 %\usepackage{mathptmx} % assumes new font selection scheme installed
 \usepackage{times} % assumes new font selection scheme installed
@@ -23,6 +23,7 @@
 %\usepackage{amssymb}  % assumes amsmath package installed
 
 \usepackage{color}
+\usepackage{graphicx}
 
 \newcommand{\note}[1]{\textcolor{red}{\textbf{#1}}}
 
