--- a/writeups/icra12/misc.bib
+++ b/writeups/icra12/misc.bib
@@ -183,3 +183,23 @@ year = {2009},
 	ceptionChallenge},
 	Title = {Solution in Perception Challenge}}
 
+@Article{Doria2009,
+  Author	= "D. Doria",
+  Title		= "A Synthetic LiDAR Scanner for VTK",
+  howpublished		= "\url{http://hdl.handle.net/10380/3125}",
+  Year		= 2009,
+  Month		= 09,
+  Keywords	= "LiDAR, Synthetic Scanner, 3d model",
+}
+
+@inproceedings { Rusu09ICRA,
+	title = {Fast Point Feature Histograms (FPFH) for 3D Registration},
+	booktitle = {The IEEE International Conference on Robotics and Automation (ICRA)},
+	year = {2009},
+	month = {05/2009},
+	address = {Kobe, Japan},
+	keywords = {},
+	URL = {http://files.rbrusu.com/publications/Rusu09ICRA.pdf},
+	author = {Radu Bogdan Rusu and Nico Blodow and Michael Beetz}
+}
+
