get rid of author achnowledgments

--- a/writeups/icra12/report.tex
+++ b/writeups/icra12/report.tex
@@ -46,15 +46,15 @@ Proctor: Evaluating 3-D Recognition
 %         {\tt\small pmisra@cs.wright.edu}}
 %}
 
-\author{Some people% <-this % stops a space
-\thanks{This work was not supported by any organization}% <-this % stops a space
-\thanks{H. Kwakernaak is with Faculty of Electrical Engineering, Mathematics and Computer Science,
-        University of Twente, 7500 AE Enschede, The Netherlands
-        {\tt\small h.kwakernaak@autsubmit.com}}%
-\thanks{P. Misra is with the Department of Electrical Engineering, Wright State University,
-        Dayton, OH 45435, USA
-        {\tt\small pmisra@cs.wright.edu}}%
-}
+%\author{Some people% <-this % stops a space
+%\thanks{This work was not supported by any organization}% <-this % stops a space
+%\thanks{H. Kwakernaak is with Faculty of Electrical Engineering, Mathematics and Computer Science,
+%        University of Twente, 7500 AE Enschede, The Netherlands
+%        {\tt\small h.kwakernaak@autsubmit.com}}%
+%\thanks{P. Misra is with the Department of Electrical Engineering, Wright State University,
+%        Dayton, OH 45435, USA
+%        {\tt\small pmisra@cs.wright.edu}}%
+%}
 
 
 \begin{document}
