more related work and introduction

--- a/writeups/icra12/evaluation.tex
+++ b/writeups/icra12/evaluation.tex
@@ -14,6 +14,7 @@ We evaluate the correctness of our results with the following metrics:
 \end{itemize}
 
 An additional important evaluation is the runtime performance of different methods.
+This data allows focused work on fast feature extraction and on algorithms to speed up matching, such as locality-sensitive hashing \cite{Frome2004}.
 Hence, we report timing results, split by the different stages of our pipeline, for all experimental conditions.
 In all cases, the tests were run on a 2.50 GHz Intel Core2 Quad Q9300 with 4 GB of RAM.
 
