--- a/writeups/icra12/report.tex
+++ b/writeups/icra12/report.tex
@@ -65,7 +65,7 @@ Proctor: Evaluating 3-D Recognition
 
 \begin{abstract}
 
-REcently proliferation of cheap 3-D sensors.
+Recently proliferation of cheap 3-D sensors.
 Lots of work on feature representations.
 But no unified evaluation available.
 We present an evaluation framework for point cloud-based recognition.
