--- a/writeups/icra12/intro_and_related_work.tex
+++ b/writeups/icra12/intro_and_related_work.tex
@@ -6,7 +6,7 @@ But the sheer diversity of applications has made it hard to see the common patte
 
 \begin{figure}[thpb]
    \centering
-   \includegraphics[width=0.45\textwidth]{figures/figure1.pdf}
+   \includegraphics[width=0.45\textwidth]{../figures/figure1.pdf}
    \caption{Our system modularizes the standard 3-D recognition pipeline such that individual components may be comparatively evaluated.}
    \label{fig:figure1}
 \end{figure}
