--- a/writeups/icra12/misc.bib
+++ b/writeups/icra12/misc.bib
@@ -177,7 +177,7 @@ year = {2009},
 	ceptionChallenge},
 	Title = {Solution in Perception Challenge}}
 
-@Article{Doria2009,
+@misc{Doria2009,
   Author	= "D. Doria",
   Title		= "A Synthetic LiDAR Scanner for VTK",
   howpublished		= "\url{http://hdl.handle.net/10380/3125}",
