--- a/writeups/icra12/misc.bib
+++ b/writeups/icra12/misc.bib
@@ -245,3 +245,12 @@ ISSN={},}
    url = {http://dx.doi.org/10.1007/978-3-642-15558-1_26},
    year = {2010}
 }
+
+@book{vtk,
+ author = {Schroeder, Will and Martin, Kenneth M. and Lorensen, William E.},
+ title = {The visualization toolkit (2nd ed.): an object-oriented approach to 3D graphics},
+ year = {1998},
+ isbn = {0-13-954694-4},
+ publisher = {Prentice-Hall, Inc.},
+ address = {Upper Saddle River, NJ, USA},
+} 
