--- a/writeups/results/PFH-FPFH-SHOT-SPIN_IMAGE_table.tex
+++ b/writeups/results/PFH-FPFH-SHOT-SPIN_IMAGE_table.tex
@@ -1,19 +1,10 @@
-\documentclass[10pt]{article}
-\usepackage[usenames]{color} %used for font color
-\usepackage{amssymb} %maths
-\usepackage{amsmath} %maths
-\usepackage[utf8]{inputenc} %useful to type directly diacritic characters
-\usepackage{multirow}
-\begin{document}
-
 \begin{tabular}{ | l || l | l | l | l | }
 \hline
 Metric & PFH & FPFH & SHOT & SPIN IMAGE \\
 \hline
- \% Correct & 86.25 & 87.50 & 73.75 & 49.35 \\
-AP & 0.850 & 0.855 & 0.635 & 0.307 \\
-Avg. Rank & 2.250 & 2.160 & 2.300 & 3.960 \\
-AUH & 0.844 & 0.855 & 0.838 & 0.654 \\
+ \% Correct & 86.25 & \bf 87.50 & 73.75 & 49.35 \\
+AP & 0.85 & \bf 0.86 & 0.64 & 0.31 \\
+Avg. Rank & 2.25 & 2.16 & 2.30 & \bf 3.96 \\
+AUH & 0.84 & \bf 0.85 & 0.84 & 0.65 \\
 \hline
 \end{tabular}
-\end{document}
